--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--Основа-->
     <main>
       <!--Основная часть-->
-      <section class="hero">
+      <section class="hero overlay">
         <h1 class="hero-title">
           ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
           ДЛЯ ВАШЕГО БИЗНЕСА
