working on SVGs

--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
         </nav>
         <ul class="contacts-list list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-contacts">
+              <svg class="svg-mail">
+                <use href="./images/icons.svg#mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-contacts">
+              <svg class="svg-phone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -54,7 +64,7 @@
           <ul class="features-list">
             <li class="features-item">
               <div class="features-thumb">
-                <svg class="svg-icon">
+                <svg class="svg-main">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -65,7 +75,7 @@
             </li>
             <li class="features-item">
               <div class="features-thumb">
-                <svg class="svg-icon">
+                <svg class="svg-main">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -76,7 +86,7 @@
             </li>
             <li class="features-item">
               <div class="features-thumb">
-                <svg class="svg-icon">
+                <svg class="svg-main">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -87,7 +97,7 @@
             </li>
             <li class="features-item">
               <div class="features-thumb">
-                <svg class="svg-icon">
+                <svg class="svg-main">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
