--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="contacts-list list">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link header-contacts">
-              <svg class="svg-mail">
+              <svg class="icon mail" width="16" height="12">
                 <use href="./images/icons.svg#mail"></use>
               </svg>
               info@devstudio.com</a
@@ -38,7 +38,7 @@
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link header-contacts">
-              <svg class="svg-phone">
+              <svg class="icon phone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
