--- a/index.html
+++ b/index.html
@@ -128,91 +128,13 @@
       </section>
       <!--Состав команды-->
       <section class="team-section">
-        <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="teammate">
-              <img class="human" src="./images/photo1.jpg" alt="сотрудник1" width="270" />
-              <div class="description">
-                <h3 class="title">Игорь Демьяненко</h3>
-                <p class="team-text">Product Designer</p>
-
-                <ul class="team-soc-list list">
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="teammate">
-              <img class="human" src="./images/photo2.jpg" alt="сотрудник2" width="270" />
-              <div class="description">
-                <h3 class="title">Ольга Репина</h3>
-                <p class="team-text">Frontend Developer</p>
-
-                <ul class="team-soc-list list">
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-soc-item">
-                    <a href="" class="team-soc-link link">
-                      <svg class="team-soc-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="teammate">
-              <img class="human" src="./images/photo3.jpg" alt="сотрудник3" width="270" />
-              <div class="description">
-                <h3 class="title">Николай Тарасов</h3>
-                <p class="team-text">Marketing</p>
-              
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="teammate">
+            <img class="human" src="./images/photo1.jpg" alt="сотрудник1" width="270" />
+            <div class="description">
+              <h3 class="title">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
               <ul class="team-soc-list list">
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link link">
@@ -243,93 +165,191 @@
                   </a>
                 </li>
               </ul>
-              </div>
-            </li>
-            <li class="teammate">
-              <img class="human" src="./images/photo4.jpg" alt="сотрудник4" width="270" />
-              <div class="description">
-                <h3 class="title">Михаил Ермаков</h3>
-                <p class="team-text">UI Designer</p>
-              
-              <ul class="team-soc-list list">
-                <li class="team-soc-item">
-                  <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-soc-item">
-                  <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-soc-item">
-                  <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-soc-item">
-                  <a href="" class="team-soc-link link">
-                    <svg class="team-soc-icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </li>
             </div>
+          </li>
+          <li class="teammate">
+            <img class="human" src="./images/photo2.jpg" alt="сотрудник2" width="270" />
+            <div class="description">
+              <h3 class="title">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="teammate">
+            <img class="human" src="./images/photo3.jpg" alt="сотрудник3" width="270" />
+            <div class="description">
+              <h3 class="title">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="teammate">
+            <img class="human" src="./images/photo4.jpg" alt="сотрудник4" width="270" />
+            <div class="description">
+              <h3 class="title">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link">
+                    <svg class="team-soc-icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <!--Клиенты-->
+      <section class="clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-company1"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-Logo3"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-Logo4"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-Logo5"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-logo">
+                  <use href="./images/icons.svg#icon-Logo6"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
-      <!--Клиенты-->
-<section class="clients">
-  <div class="container">
-    <h2 class="section-title">Постоянные клиенты</h2>
-<ul class="clients-list list">
-  <li class="clients-item">
-    <a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-company1"></use>
-                </svg></a></li>
-  <li class="clients-item"><a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-Logo2"></use>
-                </svg></a></li>
-  <li class="clients-item"><a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-Logo3"></use>
-                </svg></a></li>
-  <li class="clients-item"><a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-Logo4"></use>
-                </svg></a></li>
-  <li class="clients-item"><a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-Logo5"></use>
-                </svg></a></li>
-  <li class="clients-item"><a href="" class="clients-link"><svg class="clients-logo">
-                  <use href="./images/icons.svg#icon-Logo6"></use>
-                </svg></a></li>
-</ul>
-  </div>
-</section>
     </main>
     <!--Футер-->
     <footer class="footer">
       <div class="container footer-socials">
-         <div class="footer-address">
+        <div class="footer-address">
           <a href="./index.html" class="logo">Web<span class="studio-footer">Studio</span></a>
-          <address class="address"><a href="http://bit.ly/3pXMvUd" target="_blank" class="location"
-            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></address>
+          <address class="address">
+            <a
+              href="http://bit.ly/3pXMvUd"
+              target="_blank"
+              class="location"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
           <ul class="footer-list">
             <li class="location-item">
               <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
             </li>
-            <li class="location-item"><a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a></li>
+            <li class="location-item">
+              <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a>
+            </li>
           </ul>
         </div>
-                <div class="join">
-          <h1 class="join-title">Присоединяйтесь</h1>
+        <div class="join">
+          <h2 class="join-title">Присоединяйтесь</h2>
           <ul class="socials list">
             <li class="social-item">
               <a class="social-link" href="">
