--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="button-list list">
-            <li class="item"><button type="button" class="button">Все</button></li>
+            <li class="item"><button type="button" class="active-button button">Все</button></li>
             <li class="item"><button type="button" class="button">Веб-сайты</button></li>
             <li class="item"><button type="button" class="button">Приложения</button></li>
             <li class="item"><button type="button" class="button">Дизайн</button></li>
@@ -194,7 +194,7 @@
           </ul>
         </div>
                 <div class="join">
-          <h1 class="join-title">Присоединяйтесь</h1>
+          <h2 class="join-title">Присоединяйтесь</h2>
           <ul class="socials list">
             <li class="social-item">
               <a class="social-link" href="">
