--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <ul class="clients-list list">
             <li class="clients-item">
               <a href="" class="clients-link"
-                ><svg class="clients-logo">
+                ><ы class="clients-logo">
                   <use href="./images/icons.svg#icon-company1"></use></svg
               ></a>
             </li>
