--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,16 @@
               <svg class="icon mail" width="16" height="12">
                 <use href="./images/icons.svg#mail"></use>
               </svg>
-              info@devstudio.com</a>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link header-contacts">
               <svg class="icon phone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11</a>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -51,7 +53,7 @@
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="button-list list">
-            <li class="item"><button type="button" class="active-button button">Все</button></li>
+            <li class="item"><button type="button" class="active button">Все</button></li>
             <li class="item"><button type="button" class="button">Веб-сайты</button></li>
             <li class="item"><button type="button" class="button">Приложения</button></li>
             <li class="item"><button type="button" class="button">Дизайн</button></li>
@@ -59,121 +61,87 @@
           </ul>
           <ul class="images-container list">
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port1.jpg"
-                  alt="ноутбук"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Технокряк</h2>
-                  <p class="tech-text">Веб-сайт</p>
-                </div>
-              </a>
+              <img class="portfolio-logos" src="./images/port1.jpg" alt="ноутбук" width="370" />
+              <div class="pictures-text">
+                <h2 class="tech-title">Технокряк</h2>
+                <p class="tech-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port2.jpg"
-                  alt="баскетболисты"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="tech-text">Дизайн</p>
-                </div>
-              </a>
+              <img
+                class="portfolio-logos"
+                src="./images/port2.jpg"
+                alt="баскетболисты"
+                width="370"
+              />
+              <div class="pictures-text">
+                <h2 class="tech-title">Постер New Orlean vs Golden Star</h2>
+                <p class="tech-text">Дизайн</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port3.jpg"
-                  alt="рыба"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Ресторан Seafood</h2>
-                  <p class="tech-text">Приложение</p>
-                </div>
-              </a>
+              <img class="portfolio-logos" src="./images/port3.jpg" alt="рыба" width="370" />
+              <div class="pictures-text">
+                <h2 class="tech-title">Ресторан Seafood</h2>
+                <p class="tech-text">Приложение</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port4.jpg"
-                  alt="наушники"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Проект Prime</h2>
-                  <p class="tech-text">Маркетинг</p>
-                </div>
-              </a>
+              <img class="portfolio-logos" src="./images/port4.jpg" alt="наушники" width="370" />
+              <div class="pictures-text">
+                <h2 class="tech-title">Проект Prime</h2>
+                <p class="tech-text">Маркетинг</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port5.jpg"
-                  alt="коробки"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Проект Boxes</h2>
-                  <p class="tech-text">Приложение</p>
-                </div>
-              </a>
+              <img class="portfolio-logos" src="./images/port5.jpg" alt="коробки" width="370" />
+              <div class="pictures-text">
+                <h2 class="tech-title">Проект Boxes</h2>
+                <p class="tech-text">Приложение</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port6.jpg"
-                  alt="компьютер-моноблок"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Inspiration has no Borders</h2>
-                  <p class="tech-text">Веб-сайт</p>
-                </div>
-              </a>
+              <img
+                class="portfolio-logos"
+                src="./images/port6.jpg"
+                alt="компьютер-моноблок"
+                width="370"
+              />
+              <div class="pictures-text">
+                <h2 class="tech-title">Inspiration has no Borders</h2>
+                <p class="tech-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port7.jpg"
-                  alt="раскрытая книга"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Издание Limited Edition</h2>
-                  <p class="tech-text">Дизайн</p>
-                </div>
-              </a>
+              <img
+                class="portfolio-logos"
+                src="./images/port7.jpg"
+                alt="раскрытая книга"
+                width="370"
+              />
+              <div class="pictures-text">
+                <h2 class="tech-title">Издание Limited Edition</h2>
+                <p class="tech-text">Дизайн</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port8.jpg"
-                  alt="бирка"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Проект LAB</h2>
-                  <p class="tech-text">Маркетинг</p>
-                </div>
-              </a>
+              <img class="portfolio-logos" src="./images/port8.jpg" alt="бирка" width="370" />
+              <div class="pictures-text">
+                <h2 class="tech-title">Проект LAB</h2>
+                <p class="tech-text">Маркетинг</p>
+              </div>
             </li>
             <li class="images-item">
-                <img
-                  class="portfolio-logos"
-                  src="./images/port9.jpg"
-                  alt="работа за ноубуком"
-                  width="370"
-                />
-                <div class="pictures-text">
-                  <h2 class="tech-title">Growing Business</h2>
-                  <p class="tech-text">Приложение</p>
-                </div>
-              </a>
+              <img
+                class="portfolio-logos"
+                src="./images/port9.jpg"
+                alt="работа за ноубуком"
+                width="370"
+              />
+              <div class="pictures-text">
+                <h2 class="tech-title">Growing Business</h2>
+                <p class="tech-text">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -182,18 +150,27 @@
     <!--Футер -->
     <footer class="footer">
       <div class="container footer-socials">
-         <div class="footer-address">
+        <div class="footer-address">
           <a href="./index.html" class="logo">Web<span class="studio-footer">Studio</span></a>
-          <address class="address"><a href="http://bit.ly/3pXMvUd" target="_blank" class="location"
-            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></address>
+          <address class="address">
+            <a
+              href="http://bit.ly/3pXMvUd"
+              target="_blank"
+              class="location"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
           <ul class="footer-list">
             <li class="location-item">
               <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
             </li>
-            <li class="location-item"><a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a></li>
+            <li class="location-item">
+              <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a>
+            </li>
           </ul>
         </div>
-                <div class="join">
+        <div class="join">
           <h2 class="join-title">Присоединяйтесь</h2>
           <ul class="socials list">
             <li class="social-item">
